updated the footer color and added a caption

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
   </menu>
   
   <img src="./assets/hotwells.jpg" class="hotwells" alt="picture of a steamboat on the Floating Harbour" />
-  
+  <figcaption> Hotwells, Bristol </figcaption>
 </header>
 
 <main>
 
 
-<p>Fill in you name and email address below and click on "Send".</p>
+<p>Fill in your name and email address below and click on "Send".</p>
 
 <h2 id="anchor-name">Contact Us</h2>
 <form id="#form_beginning" action="#">
@@ -41,6 +41,7 @@
 </body>
 
 <footer>
+  
 <h4>Joanna's webpage 2022</h4>
 </footer>
 </body>
